sidebar/credentials update

--- a/songs&albums.html
+++ b/songs&albums.html
@@ -5,132 +5,139 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Artem Svystun">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="navigation-bar.js"></script>
     <title>Imagine Dragons - Songs</title>
 </head>
 <body>
-    <div class="nav" id="nav">
-        <a href="index.html">Про гурт</a>
-        <a href="frontman.html">Фронтмен</a>
-        <a href="line-up.html">Інші учасники</a>
-        <a href="songs&albums.html">Пісні та альбоми</a>
+    <div id="sidebar">
+        <ul>
+            <li><a href="index.html">Про гурт</a></li>
+            <li><a href="frontman.html">Фронтмен</a></li>
+            <li><a href="line-up.html">Інші учасники</a></li>
+            <li class="active"><a href="songs&albums.html">Пісні та альбоми</a></li>
+        </ul>
     </div>
 
-    <H1 class="headers">Пісні та альбоми<hr></H1>
+    <section>
+        <header class="credentials">
+            <i class="fa fa-bars" id="bars-icon"></i>
+            <div>
+                <p><a href="https://shop.imaginedragonsmusic.com/">Imagine Dragons store website</a></p>
+                <a href="https://github.com/Haivop/web-proj---ID-group"><i class="fa fa-github" id="github-icon"></i></a>
+            </div>
+        </header>
+        
+        <section>
+            <H1 class="headers">Пісні та альбоми<hr></H1>
+            <table id="albums-table">
+                <caption><h2 class="headers">Albums</h2></caption>
+                <thead data-toggle-id="albums-metadata"><tr><td><b>Night Visions</b></td><td><b>Smoke+Mirrors</b></td><td><b>Origins</b></td><td><b>Loom</b></td></tr></thead>
+                <tbody id="albums-metadata">
+                    <tr>
+                        <td><img src="Images/Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover"></td>
+                        <td><img src="Images/Imagine_Dragons_-_Smoke_+_Mirrors.png" alt="Smoke+Mirrors Album Cover"></td>
+                        <td><img src="Images/Origins_cover.png" alt="Origins Album Cover"></td>
+                        <td><img src="Images/Imagine_Dragons_-_Loom.png" alt="Loom Album Cover"></td>
+                    </tr>
+                    <tr class="album-copyright">
+                        <td>
+                            <p>
+                                By Imagine Dragons - <a rel="nofollow" class="external free" href="http://imaginedragonsfans.com">http://imaginedragonsfans.com</a>, 
+                                <a href="//en.wikipedia.org/wiki/File:Night_Visions_Album_Cover.jpeg" title="Fair use of copyrighted material in the context of Night Visions (album)">Fair use</a>, 
+                                <a href="https://en.wikipedia.org/w/index.php?curid=36462886">Link</a>
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                By The cover art can be obtained from <a href="//en.wikipedia.org/wiki/Interscope_Records" title="Interscope Records">Interscope Records</a>., 
+                                <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Smoke_%2B_Mirrors.png" title="Fair use of copyrighted material in the context of Smoke + Mirrors">Fair use</a>, 
+                                <a href="https://en.wikipedia.org/w/index.php?curid=45634462">Link</a>
+                            </p>
 
-    <table id="albums-table">
-        <caption><h2 class="headers">Albums</h2></caption>
-        <thead data-toggle-id="albums-metadata"><tr><td><b>Night Visions</b></td><td><b>Smoke+Mirrors</b></td><td><b>Origins</b></td><td><b>Loom</b></td></tr></thead>
-        <tbody id="albums-metadata">
-            <tr>
-                <td><img src="Images/Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover"></td>
-                <td><img src="Images/Imagine_Dragons_-_Smoke_+_Mirrors.png" alt="Smoke+Mirrors Album Cover"></td>
-                <td><img src="Images/Origins_cover.png" alt="Origins Album Cover"></td>
-                <td><img src="Images/Imagine_Dragons_-_Loom.png" alt="Loom Album Cover"></td>
-            </tr>
-            <tr class="album-copyright">
-                <td>
-                    <p>
-                        By Imagine Dragons - <a rel="nofollow" class="external free" href="http://imaginedragonsfans.com">http://imaginedragonsfans.com</a>, 
-                        <a href="//en.wikipedia.org/wiki/File:Night_Visions_Album_Cover.jpeg" title="Fair use of copyrighted material in the context of Night Visions (album)">Fair use</a>, 
-                        <a href="https://en.wikipedia.org/w/index.php?curid=36462886">Link</a>
-                    </p>
-                </td>
-                <td>
-                    <p>
-                        By The cover art can be obtained from <a href="//en.wikipedia.org/wiki/Interscope_Records" title="Interscope Records">Interscope Records</a>., 
-                        <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Smoke_%2B_Mirrors.png" title="Fair use of copyrighted material in the context of Smoke + Mirrors">Fair use</a>, 
-                        <a href="https://en.wikipedia.org/w/index.php?curid=45634462">Link</a>
-                    </p>
+                        </td>
+                        <td>
+                            <p>
+                                By The cover art can be obtained from the record label., <a href="//en.wikipedia.org/wiki/File:Origins_cover.png" title="Fair use of copyrighted material in the context of Origins (Imagine Dragons album)">Fair use</a>, 
+                                <a href="https://en.wikipedia.org/w/index.php?curid=58935282">Link</a>
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                By May be found at the following website: 
+                                <a rel="nofollow" class="external text" href="https://music.apple.com/us/album/loom/1741841621">Apple Music</a>, 
+                                <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Loom.png" title="Fair use of copyrighted material in the context of Loom (Imagine Dragons album)">Fair use</a>, 
+                                <a href="https://en.wikipedia.org/w/index.php?curid=76710590">Link</a>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr class="album-text">
+                        <td>
+                            <div>
+                                <p>
+                                    Дебютний студійний альбом американського поп-рок-гурту Imagine Dragons, представлений 4 вересня 2012 року. 
+                                    12 лютого 2013 року була представлена розширена версія платівки із трьома новими композиціями, а 26 березня 
+                                    — британське видання. Ден Рейнольдс, фронтмен гурту, зазначив, що робота над альбомом тривала три роки; 
+                                    шість пісень були раніше представлені у міні-альбомах.
+                                </p>
+                            </div>
+                        </td>
+                        <td>
+                            <div>
+                                <p>
+                                    Другий студійний альбом американського гурту «Imagine Dragons», представлений 17 лютого 2015 року. 
+                                    Платівка дебютувала на першій позиції у чарті Billboard 200 у США, а також очолила британський та канадський чарти. 
+                                    Альбом став «золотим» у США, Великій Британії, Мексиці та Бразилії. Перед виходом безпосередньо платівки гурт представив 
+                                    3 сингли: «I Bet My Life», «Gold» і «Shots». Загальний тираж альбому у США перевищив 1 мільйон копій у липні 2017 року.
+                                </p>
+                            </div>
+                        </td>
+                        <td>
+                            <div>
+                                <p>
+                                    Четвертий студійний альбом американського гурту Imagine Dragons, представлений 9 листопада 2018 року під лейблами 
+                                    «Kidinakorner», «Polydor Records» та «Interscope Records». Продюсером альбому виступив сам колектив, а також Alex da Kid, 
+                                    Mattman & Robin, John Hill, Joel Little і Jayson DeZuzio, які працювали над попередньою роботою гурту — платівкою Evolve, 
+                                    та Jorgen Odegard. Фронтмен Ден Рейнольдс описав Origins як «сестринський альбом» Evolve, і що ця робота завершує певний 
+                                    музичний цикл їхньої творчості.
+                                </p>
+                            </div>
+                        </td>
+                        <td>
+                            <div>
+                                <p>
+                                    Шостий студійний альбом американського поп-рок гурту Imagine Dragons, випущений лейблами Kidinakorner та Interscope Records 
+                                    28 червня 2024 року. Стандартна версія платівки складається з дев'яти пісень (що є для гурту найменшою кількістю в альбомі 
+                                    на сьогоднішній день). Продюсерами альбому став сам гурт та їх давні партнери Mattman & Robin.
+                                </p>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
 
-                </td>
-                <td>
-                    <p>
-                        By The cover art can be obtained from the record label., <a href="//en.wikipedia.org/wiki/File:Origins_cover.png" title="Fair use of copyrighted material in the context of Origins (Imagine Dragons album)">Fair use</a>, 
-                        <a href="https://en.wikipedia.org/w/index.php?curid=58935282">Link</a>
-                    </p>
-                </td>
-                <td>
-                    <p>
-                        By May be found at the following website: 
-                        <a rel="nofollow" class="external text" href="https://music.apple.com/us/album/loom/1741841621">Apple Music</a>, 
-                        <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Loom.png" title="Fair use of copyrighted material in the context of Loom (Imagine Dragons album)">Fair use</a>, 
-                        <a href="https://en.wikipedia.org/w/index.php?curid=76710590">Link</a>
-                    </p>
-                </td>
-            </tr>
-            <tr class="album-text">
-                <td>
-                    <div>
-                        <p>
-                            Дебютний студійний альбом американського поп-рок-гурту Imagine Dragons, представлений 4 вересня 2012 року. 
-                            12 лютого 2013 року була представлена розширена версія платівки із трьома новими композиціями, а 26 березня 
-                            — британське видання. Ден Рейнольдс, фронтмен гурту, зазначив, що робота над альбомом тривала три роки; 
-                            шість пісень були раніше представлені у міні-альбомах.
-                        </p>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <p>
-                            Другий студійний альбом американського гурту «Imagine Dragons», представлений 17 лютого 2015 року. 
-                            Платівка дебютувала на першій позиції у чарті Billboard 200 у США, а також очолила британський та канадський чарти. 
-                            Альбом став «золотим» у США, Великій Британії, Мексиці та Бразилії. Перед виходом безпосередньо платівки гурт представив 
-                            3 сингли: «I Bet My Life», «Gold» і «Shots». Загальний тираж альбому у США перевищив 1 мільйон копій у липні 2017 року.
-                        </p>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <p>
-                            Четвертий студійний альбом американського гурту Imagine Dragons, представлений 9 листопада 2018 року під лейблами 
-                            «Kidinakorner», «Polydor Records» та «Interscope Records». Продюсером альбому виступив сам колектив, а також Alex da Kid, 
-                            Mattman & Robin, John Hill, Joel Little і Jayson DeZuzio, які працювали над попередньою роботою гурту — платівкою Evolve, 
-                            та Jorgen Odegard. Фронтмен Ден Рейнольдс описав Origins як «сестринський альбом» Evolve, і що ця робота завершує певний 
-                            музичний цикл їхньої творчості.
-                        </p>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <p>
-                            Шостий студійний альбом американського поп-рок гурту Imagine Dragons, випущений лейблами Kidinakorner та Interscope Records 
-                            28 червня 2024 року. Стандартна версія платівки складається з дев'яти пісень (що є для гурту найменшою кількістю в альбомі 
-                            на сьогоднішній день). Продюсерами альбому став сам гурт та їх давні партнери Mattman & Robin.
-                        </p>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+        <section>
+            <table id="songs-table">
+                <caption><h2 class="headers">Songs</h2></caption>
 
-
-    <table id="songs-table">
-        <caption><h2 class="headers">Songs</h2></caption>
-
-        <thead>
-            <tr><td>Альбом</td><td>#</td><td>Пісня</td><td>Тривалість</td><td>Кількість прослуховувань на Spotify</td></tr>
-        </thead>
-        <tbody id="songs-table-body">
-            <tr><td class="album" rowspan="10">Loom</td><td class="album-summary" colspan="4">2024, 9 пісень, 28:11 хв</td></tr>
-            <tr><td>1.</td><td class="name">Wake Up</td>            <td>2:46</td>    <td align="right">57 468 120</td></tr>
-            <tr><td>2.</td><td class="name">Nice To Meet You</td>   <td>3:10</td>    <td align="right">65 791 096</td></tr>
-            <tr><td>3.</td><td class="name">Eyes Closed</td>        <td>3:20</td>    <td align="right">130 664 938</td></tr>
-            <tr><td>4.</td><td class="name">Take Me To Beach</td>   <td>2:47</td>    <td align="right">26 801 278</td></tr>
-            <tr><td>5.</td><td class="name">In Your Corner</td>     <td>3:59</td>    <td align="right">21 110 105</td></tr>
-            <tr><td>6.</td><td class="name">Gods Don't Pray</td>    <td>2:49</td>    <td align="right">18 535 609</td></tr>
-            <tr><td>7.</td><td class="name">Don't Forget Me</td>    <td>2:58</td>    <td align="right">17 913 834</td></tr>
-            <tr><td>8.</td><td class="name">Kid</td>                <td>2:39</td>    <td align="right">10 693 748</td></tr>
-            <tr><td>9.</td><td class="name">Fire In These Hills</td><td>3:39</td>    <td align="right">13 119 017</td></tr>
-        </tbody>
-    </table>
-    
-    <div id="tableOperationsMenu" style="margin-top: 10px;">
-
-    </div>
-    <script src="menu.js"></script>
-
-    <button onclick="CompareNameLengths()" style="margin-top: 10px;">Порівняти</button>
-    <button onclick="AppendAlbum()">Додати альбом</button>
-    <script src="index.js"></script>
+                <thead>
+                    <tr><td>Альбом</td><td>#</td><td>Пісня</td><td>Тривалість</td><td>Кількість прослуховувань на Spotify</td></tr>
+                </thead>
+                <tbody id="songs-table-body">
+                    <tr><td class="album" rowspan="10">Loom</td><td class="album-summary" colspan="4">2024, 9 пісень, 28:11 хв</td></tr>
+                    <tr><td>1.</td><td class="name">Wake Up</td>            <td>2:46</td>    <td align="right">57 468 120</td></tr>
+                    <tr><td>2.</td><td class="name">Nice To Meet You</td>   <td>3:10</td>    <td align="right">65 791 096</td></tr>
+                    <tr><td>3.</td><td class="name">Eyes Closed</td>        <td>3:20</td>    <td align="right">130 664 938</td></tr>
+                    <tr><td>4.</td><td class="name">Take Me To Beach</td>   <td>2:47</td>    <td align="right">26 801 278</td></tr>
+                    <tr><td>5.</td><td class="name">In Your Corner</td>     <td>3:59</td>    <td align="right">21 110 105</td></tr>
+                    <tr><td>6.</td><td class="name">Gods Don't Pray</td>    <td>2:49</td>    <td align="right">18 535 609</td></tr>
+                    <tr><td>7.</td><td class="name">Don't Forget Me</td>    <td>2:58</td>    <td align="right">17 913 834</td></tr>
+                    <tr><td>8.</td><td class="name">Kid</td>                <td>2:39</td>    <td align="right">10 693 748</td></tr>
+                    <tr><td>9.</td><td class="name">Fire In These Hills</td><td>3:39</td>    <td align="right">13 119 017</td></tr>
+                </tbody>
+            </table>
+        </section>
+    </section>
 </body>
 </html>
