--- a/line-up.html
+++ b/line-up.html
@@ -21,10 +21,12 @@
 
     <section>
         <header class="credentials">
-            <i class="fa fa-bars" id="bars-icon"></i>
-            <div>
-                <p><a href="https://shop.imaginedragonsmusic.com/">Imagine Dragons store website</a></p>
-                <a href="https://github.com/Haivop/web-proj---ID-group"><i class="fa fa-github" id="github-icon"></i></a>
+            <div id="credentials">
+                <i class="fa fa-bars" id="bars-icon"></i>
+                <div>
+                    <p><a href="https://shop.imaginedragonsmusic.com/">Imagine Dragons store website</a></p>
+                    <a href="https://github.com/Haivop/web-proj---ID-group"><i class="fa fa-github" id="github-icon"></i></a>
+                </div>
             </div>
         </header>
 
