images carousel update 0.1

--- a/songs&albums.html
+++ b/songs&albums.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="navigation-bar.js"></script>
     <script src="tabs.js"></script>
+    <script src="carousel.js"></script>
     <title>Imagine Dragons - Songs</title>
 </head>
 <body>
@@ -35,93 +36,16 @@
             </div>
         </header>
 
-        <section>
-            <table id="albums-table">
-                <caption><h2 class="headers">Albums</h2></caption>
-                <thead data-toggle-id="albums-metadata"><tr><td><b>Night Visions</b></td><td><b>Smoke+Mirrors</b></td><td><b>Origins</b></td><td><b>Loom</b></td></tr></thead>
-                <tbody id="albums-metadata">
-                    <tr>
-                        <td><img src="Images/Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover"></td>
-                        <td><img src="Images/Imagine_Dragons_-_Smoke_+_Mirrors.png" alt="Smoke+Mirrors Album Cover"></td>
-                        <td><img src="Images/Origins_cover.png" alt="Origins Album Cover"></td>
-                        <td><img src="Images/Imagine_Dragons_-_Loom.png" alt="Loom Album Cover"></td>
-                    </tr>
-                    <tr class="album-copyright">
-                        <td>
-                            <p>
-                                By Imagine Dragons - <a rel="nofollow" class="external free" href="http://imaginedragonsfans.com">http://imaginedragonsfans.com</a>, 
-                                <a href="//en.wikipedia.org/wiki/File:Night_Visions_Album_Cover.jpeg" title="Fair use of copyrighted material in the context of Night Visions (album)">Fair use</a>, 
-                                <a href="https://en.wikipedia.org/w/index.php?curid=36462886">Link</a>
-                            </p>
-                        </td>
-                        <td>
-                            <p>
-                                By The cover art can be obtained from <a href="//en.wikipedia.org/wiki/Interscope_Records" title="Interscope Records">Interscope Records</a>., 
-                                <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Smoke_%2B_Mirrors.png" title="Fair use of copyrighted material in the context of Smoke + Mirrors">Fair use</a>, 
-                                <a href="https://en.wikipedia.org/w/index.php?curid=45634462">Link</a>
-                            </p>
-
-                        </td>
-                        <td>
-                            <p>
-                                By The cover art can be obtained from the record label., <a href="//en.wikipedia.org/wiki/File:Origins_cover.png" title="Fair use of copyrighted material in the context of Origins (Imagine Dragons album)">Fair use</a>, 
-                                <a href="https://en.wikipedia.org/w/index.php?curid=58935282">Link</a>
-                            </p>
-                        </td>
-                        <td>
-                            <p>
-                                By May be found at the following website: 
-                                <a rel="nofollow" class="external text" href="https://music.apple.com/us/album/loom/1741841621">Apple Music</a>, 
-                                <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Loom.png" title="Fair use of copyrighted material in the context of Loom (Imagine Dragons album)">Fair use</a>, 
-                                <a href="https://en.wikipedia.org/w/index.php?curid=76710590">Link</a>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="album-text">
-                        <td>
-                            <div>
-                                <p>
-                                    Дебютний студійний альбом американського поп-рок-гурту Imagine Dragons, представлений 4 вересня 2012 року. 
-                                    12 лютого 2013 року була представлена розширена версія платівки із трьома новими композиціями, а 26 березня 
-                                    — британське видання. Ден Рейнольдс, фронтмен гурту, зазначив, що робота над альбомом тривала три роки; 
-                                    шість пісень були раніше представлені у міні-альбомах.
-                                </p>
-                            </div>
-                        </td>
-                        <td>
-                            <div>
-                                <p>
-                                    Другий студійний альбом американського гурту «Imagine Dragons», представлений 17 лютого 2015 року. 
-                                    Платівка дебютувала на першій позиції у чарті Billboard 200 у США, а також очолила британський та канадський чарти. 
-                                    Альбом став «золотим» у США, Великій Британії, Мексиці та Бразилії. Перед виходом безпосередньо платівки гурт представив 
-                                    3 сингли: «I Bet My Life», «Gold» і «Shots». Загальний тираж альбому у США перевищив 1 мільйон копій у липні 2017 року.
-                                </p>
-                            </div>
-                        </td>
-                        <td>
-                            <div>
-                                <p>
-                                    Четвертий студійний альбом американського гурту Imagine Dragons, представлений 9 листопада 2018 року під лейблами 
-                                    «Kidinakorner», «Polydor Records» та «Interscope Records». Продюсером альбому виступив сам колектив, а також Alex da Kid, 
-                                    Mattman & Robin, John Hill, Joel Little і Jayson DeZuzio, які працювали над попередньою роботою гурту — платівкою Evolve, 
-                                    та Jorgen Odegard. Фронтмен Ден Рейнольдс описав Origins як «сестринський альбом» Evolve, і що ця робота завершує певний 
-                                    музичний цикл їхньої творчості.
-                                </p>
-                            </div>
-                        </td>
-                        <td>
-                            <div>
-                                <p>
-                                    Шостий студійний альбом американського поп-рок гурту Imagine Dragons, випущений лейблами Kidinakorner та Interscope Records 
-                                    28 червня 2024 року. Стандартна версія платівки складається з дев'яти пісень (що є для гурту найменшою кількістю в альбомі 
-                                    на сьогоднішній день). Продюсерами альбому став сам гурт та їх давні партнери Mattman & Robin.
-                                </p>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+        <div id="albums-table">
+            <i class="fa fa-arrow-left"></i>
+            <div>
+                <img class="hidden" src="Images/Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover">
+                <img class="hidden" src="Images/Imagine_Dragons_-_Smoke_+_Mirrors.png" alt="Smoke+Mirrors Album Cover">
+                <img class="hidden" src="Images/Origins_cover.png" alt="Origins Album Cover">
+                <img class="hidden" src="Images/Imagine_Dragons_-_Loom.png" alt="Loom Album Cover">
+            </div>
+            <i class="fa fa-arrow-right"></i>
+        </div>
 
         <section>
             <table id="songs-table" class="hidden">
